--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main'}}
     strategy:
       matrix:
-        environment: [prod, testing, staging]
+        environment: [prod, testing, allergy-intolerrance-id]
     
     runs-on: ubuntu-latest
     environment:
