feat: add makefile to simplify build workflows

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Run SUSHI Build
         run: |
-          sushi .
+          sushi -s .
 
       - name: Publish FHIR Artifacts to HAPI FHIR
         run: |
