--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -24,12 +24,13 @@ publisher:
 # package id and the value is the version (or dev/current). For advanced
 # use cases, the value can be an object with keys for id, uri, and version.
 #
-# dependencies:
-#   hl7.fhir.us.core: 3.1.0
-#   hl7.fhir.us.mcode:
-#     id: mcode
-#     uri: http://hl7.org/fhir/us/mcode/ImplementationGuide/hl7.fhir.us.mcode
-#     version: 1.0.0
+dependencies:
+  hl7.fhir.r5.core: 5.0.0
+  # hl7.fhir.us.core: 3.1.0
+  # hl7.fhir.us.mcode:
+  #   id: mcode
+  #   uri: http://hl7.org/fhir/us/mcode/ImplementationGuide/hl7.fhir.us.mcode
+  #   version: 1.0.0
 #
 #
 # The pages property corresponds to IG.definition.page. SUSHI can
