fix: allergy bindings (#151)
Signed-off-by: Kathurima Kimathi <kathurimakimathi415@gmail.com>

--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,4 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-silfhirprofileig.json
 template = fhir.base.template#current
+fhir-version = 5.0.0
