feat: add legacy identifier concept map
Just a simple poc to see if we can map the legacy identifiers to our codesystem.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,6 +60,7 @@ jobs:
               RESOURCE_ID=$(jq -r '.id' "$file")
 
               if [ "$RESOURCE_TYPE" = "StructureDefinition" ] || \
+                [ "$RESOURCE_TYPE" = "ConceptMap" ] || \
                 [ "$RESOURCE_TYPE" = "ValueSet" ] || \
                 [ "$RESOURCE_TYPE" = "CodeSystem" ]; then
 
